--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -8,30 +8,63 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <TabControl Name="RecipePages">
-            <TabItem Header="Menu" Name="RecMenu">
+            <TabItem Header="Menu" Name="RecMenu" BorderBrush="#00000000" FontWeight="Bold" FontSize="14">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="#FFF0F0F0"/>
+                        <GradientStop Color="#FFCF8A85" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
                 <StackPanel Orientation="Vertical">
-                    <StackPanel Orientation="Horizontal" Width="355">
-                        <TextBlock Text="Welcome to Zoe's Recipe Application!" FontSize="20" FontWeight="Bold" Margin="0 30 0 20"/>
+                    <StackPanel.Background>
+                        <ImageBrush/>
+                    </StackPanel.Background>
+                    <StackPanel Orientation="Horizontal" Width="450" Margin="180 40 0 0">
+                        <TextBlock Text="Welcome to Zoe's Recipe Application!" FontSize="24" FontWeight="Bold" Margin="0 0 0 20" Foreground="#FFB58F8F"/>
                     </StackPanel>
-                    <StackPanel Margin="20">
-                        <Button Content="Add Recipe" Width="200" Height="40" Click="RecAdd_Click"/>
+                    <StackPanel Margin="120 30 0 0">
+                        <Button Content="Add Recipe" FontSize="18" Width="200" Height="40" Click="RecAdd_Click" BorderBrush="#FF094406" Background="#FFF9F7F7" FontWeight="Bold"/>
                     </StackPanel>
-                    <StackPanel Margin="20">
-                        <Button Content="View Recipe" Width="200" Height="40"  Click="RecView_Click"/>
+                    <StackPanel Margin="120 30 0 0">
+                        <Button Content="View Recipe" FontSize="18" Width="200" Height="40"  Click="RecView_Click" BorderBrush="#FF094406" Background="#FFF9F7F7" FontWeight="Bold"/>
                     </StackPanel>
-                    <StackPanel Margin="20">
-                        <Button Content="Filter Recipe" Width="200" Height="40" Click="RecFilter_Click"/>
+                    <StackPanel Margin="120 30 0 0">
+                        <Button Content="Filter Recipe" FontSize="18" Width="200" Height="40" Click="RecFilter_Click" BorderBrush="#FF094406" Background="#FFF9F7F7" FontWeight="Bold"/>
                     </StackPanel>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Add Recipe" Name="RecAdd">
-
+            <TabItem Header="Add Recipe" Name="RecAdd" BorderBrush="#FF060505" FontWeight="Bold" FontSize="14">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="#FFF0F0F0"/>
+                        <GradientStop Color="#FFC4AADF" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
+                <StackPanel>
+                    
+                </StackPanel>
             </TabItem>
-            <TabItem Header="View Recipe" Name="RecView">
-
+            <TabItem Header="View Recipe" Name="RecView" BorderBrush="#FF060505" FontWeight="Bold" FontSize="14">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="#FFF0F0F0"/>
+                        <GradientStop Color="#FFC4AADF" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
+                <StackPanel>
+                    
+                </StackPanel>
             </TabItem>
-            <TabItem Header="Filter Recipe" Name="RecFilter">
-
+            <TabItem Header="Filter Recipe" Name="RecFilter" BorderBrush="#FF060505" FontWeight="Bold" FontSize="14">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="#FFF0F0F0"/>
+                        <GradientStop Color="#FFC4AADF" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
+                <StackPanel>
+                    
+                </StackPanel>
             </TabItem>
         </TabControl>
     </Grid>
