--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -99,6 +99,13 @@
                         <TextBlock Text="Water(hydration): Water, Sugar Free Drinks like Tea or Coffee" FontSize="12" FontWeight="Bold" Margin="-360 70 0 20" Foreground="Black"/>
                         <TextBlock Text="Other(unhealthy foods): Soft Drinks, Chips, Cookies, Candy" FontSize="12" FontWeight="Bold" Margin="-360 85 0 20" Foreground="Black"/>
                     </StackPanel>
+                    <StackPanel Orientation="Vertical" Width="150" Margin="630 -300 0 50" Height="250">
+                        <TextBlock Text="Calories: A calorie is a unit that measures the energy content of foods."/>
+                        <TextBlock Text="Calories and Quantities have a direct relationship (linear) : When the quantity increases the calories also increase and when the quantity decreases then the calories also decrease."/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="530 -82 0 0">
+                        <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
+                    </StackPanel>
                 </StackPanel>
             </TabItem>
             <TabItem Header="View Recipe" Name="RecView" BorderBrush="Black" FontWeight="Bold" FontSize="14">
@@ -115,6 +122,10 @@
                     <StackPanel Orientation="Horizontal" Width="200" Height="60" Margin="0 20 550 0" Background="#FFCF8A85">
                         <TextBlock Text="View Recipe:" FontSize="30" FontWeight="Bold" Margin="10 0 0 20" Foreground="Black"/>
                     </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="680 250 0 0">
+                        <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
+                    </StackPanel>
                 </StackPanel>
             </TabItem>
             <TabItem Header="Filter Recipe" Name="RecFilter" BorderBrush="Black" FontWeight="Bold" FontSize="14">
@@ -130,6 +141,10 @@
                     </StackPanel.Background>
                     <StackPanel Orientation="Horizontal" Width="200" Height="60" Margin="0 20 550 0" Background="#FFCF8A85">
                         <TextBlock Text="Filter Recipe:" FontSize="30" FontWeight="Bold" Margin="10 0 0 20" Foreground="Black"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="680 270 0 0">
+                        <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
                     </StackPanel>
                 </StackPanel>
             </TabItem>
