--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -50,7 +50,14 @@
                     <StackPanel Orientation="Horizontal" Margin="340 -60 0 0">
                         <Label Content="Recipe Name:" Width="120" HorizontalContentAlignment="Left" Foreground="White" FontSize="16"/>
                         <TextBox x:Name="RecName" Width="155" Height="50"/>
+                        <Button Content="Enter" Click="RecName_Click" Background="DimGray" BorderBrush="Black"/>
                     </StackPanel>
+                    <StackPanel Orientation="Vertical" Width="300" Margin="150 0 0 0">
+                        <Label Content="Steps:" VerticalContentAlignment="Center" Width="80" FontSize="16"/>
+                        <TextBox x:Name="RecSteps" Width="300" Height="140"/>
+                        <Button Content="Add Steps" Click="AddSteps_Click" Width="100" Background="DimGray" BorderBrush="Black"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Vertical" Margin="0 -200 0 0">
                     <StackPanel Orientation="Horizontal" Margin="0 15 0 0">
                         <Label Content="Ingredient Name:" Width="140" HorizontalContentAlignment="Left" Foreground="White" FontSize="16"/>
                         <TextBox x:Name="IngName" Width="160"/>
@@ -90,7 +97,11 @@
                             <ComboBoxItem>Other</ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Width="400" Height="120" Margin="0 10 6 0" Background="CornflowerBlue">
+                    <StackPanel Orientation="Horizontal" Margin="-640 5 0 0" Width="105">
+                        <Button Content="Add Ingredient" Click="AddIng_Click" Height="25" Background="DimGray" BorderBrush="Black"/>
+                    </StackPanel>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Width="400" Height="120" Margin="0 -15 50 0" Background="CornflowerBlue">
                         <TextBlock Text="Carbohydrates(fibre): Pap, Potatoes, Pasta, Bread" FontSize="12" FontWeight="Bold" Margin="40 0 0 20" Foreground="Black"/>
                         <TextBlock Text="Vegetables and Fruits(vitamins): Carrots, Spinach and Apple, Orange" FontSize="12" FontWeight="Bold" Margin="-310 14 0 0" Foreground="Black"/>
                         <TextBlock Text="Protein(building blocks): Chicken, Mince, Eggs, Beans" FontSize="12" FontWeight="Bold" Margin="-350 30 0 20" Foreground="Black"/>
@@ -99,8 +110,8 @@
                         <TextBlock Text="Water(hydration): Water, Sugar Free Drinks like Tea or Coffee" FontSize="12" FontWeight="Bold" Margin="-360 70 0 20" Foreground="Black"/>
                         <TextBlock Text="Other(unhealthy foods): Soft Drinks, Chips, Cookies, Candy" FontSize="12" FontWeight="Bold" Margin="-360 85 0 20" Foreground="Black"/>
                     </StackPanel>
-                    <StackPanel Orientation="Vertical" Width="150" Margin="630 -300 0 50" Height="250">
-                        <TextBlock Text="Calories: A calorie is a unit that measures the energy content of foods."/>
+                    <StackPanel Orientation="Vertical" Width="150" Margin="630 -300 0 50" Height="250" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <TextBlock Text="Calories: A calorie is a unit that measures the energy content of foods." HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="200"/>
                         <TextBlock Text="Calories and Quantities have a direct relationship (linear) : When the quantity increases the calories also increase and when the quantity decreases then the calories also decrease."/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="530 -82 0 0">
@@ -122,8 +133,13 @@
                     <StackPanel Orientation="Horizontal" Width="200" Height="60" Margin="0 20 550 0" Background="#FFCF8A85">
                         <TextBlock Text="View Recipe:" FontSize="30" FontWeight="Bold" Margin="10 0 0 20" Foreground="Black"/>
                     </StackPanel>
-
-                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="680 250 0 0">
+                    <StackPanel Orientation="Vertical" Margin="0 10 550 0">
+                        <Label Content="Enter Recipe Name:" Width="155" HorizontalContentAlignment="Left" Foreground="Black" FontSize="16"/>
+                        <TextBox x:Name="SelName" Width="155" Height="35"/>
+                        <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100"/>
+                    </StackPanel>
+                    
+                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 180 0 0">
                         <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
                     </StackPanel>
                 </StackPanel>
