--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -82,7 +82,7 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                         <Label Content="Calories:" FontSize="16" Width="160" HorizontalContentAlignment="Left" Foreground="White"/>
-                        <TextBox x:Name="Calories" Width="140"/>
+                        <TextBox x:Name="IngCalories" Width="140"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                         <Label Content="Food Group:" FontSize="16" Width="135" Foreground="White"/>
