--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -134,17 +134,17 @@
                         <TextBlock Text="View Recipe:" FontSize="30" FontWeight="Bold" Margin="10 0 0 20" Foreground="Black"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="0 10 550 0">
-                        <Label Content="View current Recipes:" Background="CornflowerBlue" Width="170" FontSize="16"/>
-                        <TextBlock x:Name="alphaRec" TextWrapping="Wrap" Background="SandyBrown" Width="200" Height="100"/>
-                        <Button Content="Display" Click="DisplayRec_Click" Background="DimGray" BorderBrush="Black" Width="100"/>
+                        <Label Content="View current Recipes:" Background="LightBlue" BorderBrush="Black" BorderThickness="2" Width="170" FontSize="16"/>
+                        <TextBlock x:Name="alphaRec" TextWrapping="Wrap" Background="SandyBrown" Width="200" Height="110"/>
+                        <Button Content="Display" Click="DisplayRec_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="0 10 550 0">
-                        <Label Content="Enter Recipe Name to view Recipe Details:" Width="4" HorizontalContentAlignment="Left" Foreground="Black" FontSize="16" Background="CornflowerBlue"/>
+                        <Label Content="Enter Recipe Name to View:" Foreground="Black" Width="220" BorderBrush="Black" BorderThickness="2" FontSize="16" Background="LightBlue"/>
                         <TextBox x:Name="SelName" Width="155" Height="35"/>
-                        <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100"/>
+                        <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
                     
-                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 180 0 0">
+                    <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 -15 0 0">
                         <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
                     </StackPanel>
                 </StackPanel>
