--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -143,7 +143,9 @@
                         <TextBox x:Name="SelName" Width="155" Height="35"/>
                         <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
-                    
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock x:Name="ViewRecDetails" Text="Recipe Details:"/>
+                    </StackPanel>
                     <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 -15 0 0">
                         <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
                     </StackPanel>
