--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -135,7 +135,7 @@
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="0 10 550 0">
                         <Label Content="View current Recipes:" Background="LightBlue" BorderBrush="Black" BorderThickness="2" Width="170" FontSize="16"/>
-                        <TextBlock x:Name="alphaRec" TextWrapping="Wrap" Background="SandyBrown" Width="200" Height="110"/>
+                        <Label x:Name="alphaRec" Content=""  Background="SandyBrown" Width="200" Height="110"/>
                         <Button Content="Display" Click="DisplayRec_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="0 10 550 0">
@@ -143,8 +143,9 @@
                         <TextBox x:Name="SelName" Width="155" Height="35"/>
                         <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock x:Name="ViewRecDetails" Text="Recipe Details:"/>
+                    <StackPanel Orientation="Vertical" Margin="350 -350 10 0">
+                        <Label Content="Recipe Details:" Width="120" Height="40"  Background="SandyBrown" FontSize="16"/>
+                        <Label x:Name="ViewRecDetails" Content="" Height="280"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 -15 0 0">
                         <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
