--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -144,8 +144,8 @@
                         <Button Content="Select" Click="SelRecName_Click" Background="DimGray" BorderBrush="Black" Width="100" Height="25"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="350 -350 10 0">
-                        <Label Content="Recipe Details:" Width="120" Height="40"  Background="SandyBrown" FontSize="16"/>
-                        <Label x:Name="ViewRecDetails" Content="" Height="280"/>
+                        <Label Content="Recipe Details:" Width="120" Height="40"  Background="SandyBrown" FontSize="16" BorderBrush="Black" BorderThickness="2"/>
+                        <Label x:Name="ViewRecDetails" Content="" Width="250" Height="250" Background="AntiqueWhite" BorderBrush="Black" BorderThickness="2"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Height="40" Width="100" Margin="670 -15 0 0">
                         <Button Content="Back to Menu" Click="BackMenu_Click" Background="DarkOliveGreen" BorderBrush="Black"/>
